crates/carta/tests/snapshots/golden_e2e__mediawiki__native__paragraph-heading-boundary.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Para [ Str "intro" ]
, Header
    2 ( "b_c" , [] , [] ) [ Str "b" , SoftBreak , Str "c" ]
]
