crates/carta/tests/snapshots/golden_e2e__mediawiki__native__paragraphs.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Para
    [ Str "First"
    , Space
    , Str "line"
    , SoftBreak
    , Str "second"
    , Space
    , Str "line"
    , Space
    , Str "of"
    , Space
    , Str "same"
    , Space
    , Str "paragraph."
    ]
, Para
    [ Str "A"
    , Space
    , Str "new"
    , Space
    , Str "paragraph"
    , Space
    , Str "here."
    ]
]
