crates/carta/tests/snapshots/golden_e2e__mediawiki__native__references.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Para
    [ Str "A"
    , Space
    , Str "claim"
    , Note [ Plain [ Str "The" , Space , Str "source." ] ]
    , Space
    , Str "here."
    ]
]
