crates/carta/tests/snapshots/golden_e2e__mediawiki__native__tab-expansion.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Para [ Str "a" , Space , Str "b" ]
, Para
    [ Code ( "" , [] , [] ) "\160\160\160indented\160line" ]
]
