crates/carta/tests/snapshots/golden_e2e__mediawiki__native__table-align.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Table
    ( "" , [] , [] )
    (Caption Nothing [])
    [ ( AlignCenter , ColWidthDefault )
    , ( AlignLeft , ColWidthDefault )
    ]
    (TableHead
       ( "" , [] , [] )
       [ Row
           ( "" , [] , [] )
           [ Cell
               ( "" , [] , [] )
               AlignCenter
               (RowSpan 1)
               (ColSpan 1)
               [ Para [ Str "Centered" ] ]
           , Cell
               ( "" , [] , [] )
               AlignLeft
               (RowSpan 1)
               (ColSpan 1)
               [ Para [ Str "Left" ] ]
           ]
       ])
    [ TableBody
        ( "" , [] , [] )
        (RowHeadColumns 0)
        []
        [ Row
            ( "" , [] , [] )
            [ Cell
                ( "" , [] , [] )
                AlignDefault
                (RowSpan 1)
                (ColSpan 1)
                [ Para [ Str "one" ] ]
            , Cell
                ( "" , [] , [] )
                AlignDefault
                (RowSpan 1)
                (ColSpan 1)
                [ Para [ Str "two" ] ]
            ]
        ]
    ]
    (TableFoot ( "" , [] , [] ) [])
]
