crates/carta/tests/snapshots/golden_e2e__mediawiki__native__table-cell-attr-quoted-pipe.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Table
    ( "" , [] , [] )
    (Caption Nothing [])
    [ ( AlignDefault , ColWidthDefault ) ]
    (TableHead ( "" , [] , [] ) [])
    [ TableBody
        ( "" , [] , [] )
        (RowHeadColumns 0)
        []
        [ Row
            ( "" , [] , [] )
            [ Cell
                ( "" , [] , [ ( "style" , "background:red|orange" ) ] )
                AlignDefault
                (RowSpan 1)
                (ColSpan 1)
                [ Para
                    [ Str "cell"
                    , Space
                    , Str "with"
                    , Space
                    , Str "a"
                    , Space
                    , Str "pipe"
                    , Space
                    , Str "inside"
                    , Space
                    , Str "the"
                    , Space
                    , Str "attribute"
                    ]
                ]
            ]
        , Row
            ( "" , [] , [] )
            [ Cell
                ( "" , [] , [] )
                AlignDefault
                (RowSpan 1)
                (ColSpan 1)
                [ Para [ Str "spanning" , Space , Str "cell" ] ]
            ]
        ]
    ]
    (TableFoot ( "" , [] , [] ) [])
]
