crates/carta/tests/snapshots/golden_e2e__mediawiki__native__table-cell-attrs.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Table
    ( "" , [] , [] )
    (Caption Nothing [])
    [ ( AlignDefault , ColWidthDefault ) ]
    (TableHead ( "" , [] , [] ) [])
    [ TableBody
        ( "" , [] , [] )
        (RowHeadColumns 0)
        []
        [ Row
            ( "" , [] , [] )
            [ Cell
                ( "" , [] , [ ( "style" , "color:red" ) ] )
                AlignDefault
                (RowSpan 1)
                (ColSpan 1)
                [ Para [ Str "styled" ] ]
            ]
        , Row
            ( "" , [] , [] )
            [ Cell
                ( "" , [] , [] )
                AlignRight
                (RowSpan 1)
                (ColSpan 1)
                [ Para [ Str "right" , Space , Str "aligned" ] ]
            ]
        , Row
            ( "" , [] , [] )
            [ Cell
                ( "x" , [ "note" ] , [] )
                AlignDefault
                (RowSpan 1)
                (ColSpan 1)
                [ Para [ Str "classy" ] ]
            ]
        ]
    ]
    (TableFoot ( "" , [] , [] ) [])
]
